<resources>
    <string name="app_name">Finance Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_item">Dinner, party, salary…</string>
    <string name="item_amount">0.00</string>
    <string name="item_type_title">Type:</string>
    <string name="floatBtnDescription">Add Finance</string>
    <string name="balance_title">Balance</string>
    <string name="toggle_expense">Expense</string>
    <string name="toggle_income">Income</string>
    <string name="addBtnText">Add</string>
    <string name="description_text">Description</string>
    <string name="amount_text">Amount</string>
    <string name="searchActivityTitle">Search</string>
    <string name="addFinance">Add Finance</string>
    <string name="deleteTitle">Delete</string>
</resources>
